tests/parser/command_form/invalid_09.m.out
In invalid_09.m, line 4
|   wibble ....
|   ^^^^^^ style: end statement with a semicolon
In invalid_09.m, line 4
|   wibble ....
|   ^^^^^^ style: end statement with a newline
In invalid_09.m, line 5
|   a b % unexpected expression on a
|   ^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 2 style issue(s), 1 error(s)
